--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -9,6 +9,10 @@
   "author": "niko",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "hbs": "^4.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
